--- a/styless/style.css
+++ b/styless/style.css
@@ -1,307 +1,245 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;500&display=swap");
+
+:root {
+  --dark-blue: #5280E2;
+  --light-blue: #15CDCB;
+  --dark: #212226;
+  --light-gray: #E0DEDE
+}
+
+::-webkit-scrollbar {
+  background-color: var(--dark);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--dark-blue);
+  border-radius: 10px;
+}
+
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  background: var(--dark);
+}
+
+body, button, input, select, textarea {
+  font-family: "Josefin Sans", sans-serif;
+  color: #fff;
 }
 
 a {
   text-decoration: none;
 }
 
-ul {
-  list-style-type: none;
+li {
+  list-style: none;
 }
 
-span {
-  color: #45C4B0;
+h1 {
+  font-size: 44px;
+  margin-bottom: 20px;
 }
 
-.box-section-one {
-  height: 100vh;
-  width: 100%;
-  background: #012030;
+h2 {
+  font-size: 24px;
 }
 
-.separation {
+p {
+  color: var(--light-gray);
+}
+
+button {
+  background: var(--dark-blue);
+  border: none;
+  border-radius: 16px;
+  padding: 8px 35px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+header {
+  height: calc(100vh - 16px);
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
+}
+
+header .container {
+  height: fit-content;
+  padding: 0 100px;
+}
+
+header .container p {
+  margin-bottom: 40px;
+}
+
+header .container h1 {
+  color: var(--light-blue);
+}
+
+header .container h2 {
+  margin-bottom: 10px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  margin: 0 2em;
+  padding: 0 50px;
 }
 
-.container-header h2 {
-  color: white;
-  font-size: 2.1em;
-  font-weight: bold;
+nav ul a {
+  font-size: 18px;
+  color: var(--light-blue);
+  margin: 20px;
 }
 
-.navbar {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+nav ul a i:hover {
+  color: #fff;
 }
 
-.navbar ul {
-  position: relative;
+
+.container-about-me {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 0.8em;
-  margin-right: 2em;
-  background: white;
-  width: 8em;
-  height: 3em;
-  border-radius: 2em;
+  padding: 100px;
 }
 
-.navbar ul li {
-  position: relative;
+.container-about-me h1 {
+  color: var(--light-blue);
 }
 
-.navbar ul li a {
-  position: relative;
-  font-size: 1.5em;
-  padding: 0.5em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar ul li a i {
-  position: absolute;
-  font-size: 1.5em;
-  color: #13678A;
-}
-
-
-.activeIcon {
-  opacity: 0;
-}
-
-.navbar ul li.active-list a i {
-  opacity: 1;
-}
-
-
-.home {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 90px;
-}
-
-.home h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: white;
-}
-
-.home p {
-  font-size: 1.5em;
-  font-weight: bold;
-  color: white;
-}
-
-.info picture img {
-  width: 30em;
-}
-
-.about-me {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #13678A;
-  padding: 60px 0;
-}
-
-.about-me img {
+.img-container img {
+  width: 400;
   height: 400px;
   border-radius: 100%;
-  border: 2px solid white;
-  margin-bottom: 1em;
 }
 
-.about-me .info h2 {
-  color: white;
-  font-size: 3em;
-  text-transform: uppercase;
-}
-
-.info {
+.service {
   text-align: center;
 }
 
-.about-me .info p {
-  color: white;
-  width: 20em;
-  text-align: justify;
-  margin-top: 2em;
-  margin-bottom: 3em;
+.service h1 {
+  color: var(--light-blue);
 }
 
-.about-me .info a {
-  color: #ffff;
-  background: transparent;
-  height: 3em;
-  width: 11em;
-  padding: .5em;
-  font-size: 18px;
-  border: 3px dashed #012030;
-  border-radius: 1.6em;
-
-}
-
-.about-me .info a:hover {
-  background-color: #13678A;
-  border: 3px solid #ade8f4;
-  transition: 0.5s;
-}
-
-.attention {
-  color: white;
-  opacity: 1;
-  transition-duration: 0.5;
-}
-
-
-.projects {
-  background-color: #012030;
-  padding: 60px 0;
-}
-
-.projects h4 {
-  color: white;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 3em;
-}
-
-.conj-cards {
+.services-container, .portfolio-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 50px;
+  /* flex-direction: column; MOBILE */
 }
 
-.cards {
-  width: 300px;
-  height: 300px;
-  margin-top: 5em;
-  background-color: #13678A;
-  border-radius: 5%;
-  margin-right: 2em;
-  padding-bottom: 2em;
-  padding: 2em;
+.service .services-container .service-card {
+  background: #2F3034;
+  border: 2px solid #528BE2;
+  border-radius: 16px;
+  padding: 20px;
+}
+
+.service .services-container .service-card i {
+  margin-bottom: 20px;
+}
+
+.portfolio {
+  padding: 0 100px;
   text-align: center;
+  background: url('/imgs/portfolio-bg.png');
+  margin-bottom: 50px;
 }
 
-.cards a {
-  color: #ffff;
-  background: transparent;
-  height: 3em;
-  width: 11em;
-  padding: .5em;
-  font-size: 18px;
-  border: 3px dashed #012030;
-  border-radius: 1.6em;
+.portfolio h1 {
+  color: var(--light-blue);
 }
 
-
-.cards p {
-  font-weight: bold;
-  color: white;
-  margin-top: 1em;
-  margin-bottom: 10%;
+.portfolio .portfolio-container .portfolio-card {
+  background: radial-gradient(100% 100% at 0% 0%, rgba(255,255,255,0.33)) 0%, rgba(255, 255, 255, 0) 100%);
+  box-shadow: 0px 4px 24px -1px rgba(0,0,0,0.1);
+  backdrop-filter: blur(42px);
+  border-radius: 16px;
+  border: 2px solid #528BE2;
+  max-width: 360px;
+  padding: 25px 20px;
 }
 
-
-.cards a:hover {
-  background-color: #13678A;
-  border: 3px solid #ade8f4;
-  transition: 0.5s;
+.portfolio .portfolio-container .portfolio-card .portfolio-icon {
+  margin: 10px 10px;
 }
 
 
-.cards h3 {
-  color: white;
-}
 
-
-footer {
+.portfolio .portfolio-container .portfolio-card .language-container ul {
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  background-color: #13678A;
-  padding: 60px 0;
+  align-items: center;
+  gap: 10px; 
 }
 
-footer button {
-color: white;
-background: #45C4B0;
-padding: .5em;
-font-size: 18px;
-border: none;
-border-radius: 1.6em;
-margin-top: 1em;
+.portfolio .portfolio-container .portfolio-card .language-container ul li {
+  color: var(--light-blue);
+  margin-bottom: 20px;
+  border: 2px solid var(--light-blue);
+  border-radius: 8px;
+  padding: 5px;
 }
 
-footer button:hover{
-  background-color: #DAFDBA;
-  border: 3px solid #012030;
-  transition: 0.5s;
-}
-
-footer h3 {
+.contact {
+  max-width: 500px;
+  margin: 0 auto;
   text-align: center;
-  font-size: 2em;
-  color: white;
+  margin-bottom: 50px;
 }
 
+.contact h1 {
+  background: -webkit-linear-gradient(#eee, #528BE2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-@media (max-width: 450px) {
-  
-  .separation header {
-    display: none;
-  }
+.contact p {
+  margin-bottom: 20px;
+  text-align: center;
+}
 
-   .navbar ul {
+.contact button {
+  margin-bottom: 50px;
+}
+
+.contact button a {
+  color: #fff;
+}
+
+.contact button a:hover {
+  color: black;
+}
+
+.whats {
+  position: fixed;
+  top: 10;
+  bottom: 10px;
+  left: 10;
+  right: 20px;
+}
+
+@media (max-width: 1000px){
+  .services-container, .portfolio-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    margin-bottom: 50px;
     flex-direction: column;
-    height: 3em;
-
   }
-
-  .home img {
-    height: 24.4em;
-  }
-    
-}
-
-::-webkit-scrollbar {
-  background-color: #012030;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: whitesmoke;
-  border-radius: 10px;
 }
 
 
